--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Vignan Mahotsav 2026 - For Eternal Harmony</title>
 
   <!-- VIEWPORT -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, viewport-fit=cover" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <!-- LANGUAGE -->
   <meta http-equiv="Content-Language" content="en" />
